# Eunoma-Public-Backend-Alpha

./: .env.example  .gitignore  LICENSE  NOTICE
circuits/: .deposit_v3_retired_baseline.sha256  .deposit_v4_baseline.sha256  .gitignore  deposit_binding.circom  eunoma_templates.circom  package-lock.json  package.json  pnpm-lock.yaml  ragequit.circom  withdrawal_proof.circom
circuits/inputs/: valid_input.json  withdraw_valid_input.json
circuits/scripts/: bench_prover_browser.html  bench_prover_browser.mjs  bench_prover_browser_optimized.html  bench_prover_browser_optimized.mjs  bench_prover_node.mjs  bench_prover_node_optimized.mjs  build_asp_witness_test.mjs  build_inputs.js  build_withdraw_input.js  check_deposit_frozen.sh  commitment_tree_v2.mjs  compile.sh  compute_deposit_witness.mjs  compute_withdraw_witness.mjs  export_to_move.js  extract_deposit_binding_vk.js  extract_ragequit_vk.js  extract_withdraw_vk.js  prove.sh  (+10 more)
move/: Move.toml
operator-services/: docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
operator-services/crypto-worker-rust/: Cargo.toml
operator-services/crypto-worker-rust/src/: balance_decrypt.rs  bulletproof_reference.rs  chain_fetch.rs  lib.rs  main.rs  mpc_spdz_adapter.rs  normalize_sigma_partial.rs  transfer_sigma_reference.rs  twisted_elgamal_reference.rs
operator-services/crypto-worker-rust/tests/: aptos_ca_bulletproof_parity.rs  aptos_ca_transfer_sigma_parity.rs  aptos_ca_twisted_elgamal_parity.rs  aptos_strict_verify.rs  atomic_io.rs  balance_decrypt_tests.rs  bulletproofs_dependency_smoke.rs  ca_registration_v2.rs  mpc_spdz_adapter.rs  mpcca_withdraw_v2.rs  no_ca_local_in_v2_production.rs  normalize_sigma_partial_tests.rs  sigma_position_17_parity.rs  vault_ek_derivation_v2.rs  vault_resync_v2.rs  vault_state_init_finalize_e2e.rs  vault_state_v2.rs
operator-services/crypto-worker-rust/tests/fixtures/: frost_aptos_strict_verify.json  vault_ek_derivation_parity.json  vault_ek_lagrange_parity.json
operator-services/crypto-worker-rust/tests/fixtures/sigma_17/: 1_deposit_happy_path.json  2_deposit_happy_path.json  8_deposit_happy_path.json  8_deposit_zero_new_a_regression.json
(+324 files in other folders)
