[package]
name = "eunoma-crypto-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "eunoma_crypto_worker"
path = "src/lib.rs"

[[bin]]
name = "eunoma-crypto-worker"
path = "src/main.rs"

[dependencies]
axum = "0.7"
bulletproofs = "5"
curve25519-dalek = { version = "4", features = ["rand_core", "zeroize"] }
frost-ed25519 = "3"
hpke = { version = "0.13", default-features = false, features = ["alloc", "x25519"] }
merlin = "3"
rand = "0.8"
rand_core = "0.6"
rand_core_09 = { package = "rand_core", version = "0.9", features = ["os_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand_chacha = "0.3"
